--- a/query.css
+++ b/query.css
@@ -51,7 +51,22 @@
         font-size: 12px;
         font-weight: 500; 
     }
-    
+    .aboutme{
+        display: flex;
+        width: 65%;
+        flex-direction: column;
+        margin: auto;
+        color: white;
+        margin-top: 120px;
+        margin-bottom: 80px;
+    }
+    .aboutme h3{
+        font-size: 40px;
+        margin-bottom: -20px;
+    }
+    .aboutme h4{
+        font-size: 27px;
+    }
   }
 
   @media only screen and (max-width: 680px) {
@@ -111,6 +126,9 @@
         background-color: #383737;
         font-size: 15px;
         color: #0FDAB5;
+    }
+    .aboutme{
+        width: 80%
     }
   }
 
