--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ button{
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 2px 2px 7px 2px #0fdab5;
 }
 .logo > h1{
     color: #0FDAB5;
@@ -59,6 +60,8 @@ button{
     font-size: 25px;
     font-weight: 600;
     border-radius: 6px;
+    box-shadow: 2px 2px 7px 2px #0fdab5;
+
 }
 .socialmedia{
     position: fixed;
@@ -137,6 +140,8 @@ main .gitbtn{
     background-color: #383737;
     font-size: 20px;
     color: #0FDAB5;
+    box-shadow: 10px 10px #0FDAB5;
+    box-shadow: 2px 2px 7px 2px #0fdab5;
 }
 .aboutme{
     display: flex;
