--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header{
 }
 button{
     outline: none;
+    cursor: pointer;
 }
 .logo{
     width: 80px;
@@ -60,8 +61,9 @@ button{
     font-size: 25px;
     font-weight: 600;
     border-radius: 6px;
+}
+.btnresume >button:hover{
     box-shadow: 2px 2px 7px 2px #0fdab5;
-
 }
 .socialmedia{
     position: fixed;
@@ -141,6 +143,8 @@ main .gitbtn{
     font-size: 20px;
     color: #0FDAB5;
     box-shadow: 10px 10px #0FDAB5;
+}
+main .gitbtn:hover{
     box-shadow: 2px 2px 7px 2px #0fdab5;
 }
 .aboutme{
