--- a/query.css
+++ b/query.css
@@ -22,7 +22,26 @@
         height: 50px;
         width: 150px;
         font-size: 18px;
-        font-weight: 500; 
+    }
+    .ednSkills h3 {
+        font-size: 45px;
+        margin-bottom: -19px;
+        margin-top: 97px
+    }
+    .ednSkills h4 {
+        font-size: 33px;
+        margin-bottom: -25px;
+    }
+    .ednSkills h5{
+        font-size: 23px;
+        margin-bottom: -25px;
+    }
+    .row1 .item{
+            width: 241px;
+            margin-bottom: -27px;
+    }
+    .fa, .fas {
+        margin-top: 41px;
     }
     
   }
@@ -67,6 +86,13 @@
     .aboutme h4{
         font-size: 27px;
     }
+
+    .ednSkills .row1{
+        display: none;
+    }
+    .ednSkills .row2{
+        display: flex;
+    }
   }
 
   @media only screen and (max-width: 680px) {
@@ -91,7 +117,23 @@
         font-size: 10px;
         font-weight: 500; 
     }
-    
+
+  }
+  @media only screen and (max-width: 670px){
+  .ednSkills h4 {
+      font-size: 28px;
+  }
+}
+@media only screen and (max-width: 600px){
+    .ednSkills h5 {
+        font-size: 17px;
+    }
+    .ednSkills {
+        margin-left: 13%;
+    }
+    .fa, .fas {
+        margin-top: 27px;
+    }
   }
   @media only screen and (max-width: 580px) {
       header{
