--- a/headerSs.css
+++ b/headerSs.css
@@ -30,6 +30,7 @@
     background-color: #0FDAB5;
     border-radius: 5px;
     margin-bottom: 10px;
+    transition: all 0.5s ease-in-out ;
 }
 .menuicon{
     margin-right: 20px;
@@ -40,10 +41,12 @@
     background-color: #0FDAB5;
     border-radius: 5px;
     margin-bottom: 10px;
+    transition: all 100ms ease-in-out ;
 }
 .menuicon > .line3{
     height: 7px;
     width: 20px;
     background-color: #0FDAB5;
     border-radius: 5px;
+    transition: all 0.5s ease-in-out ;
 }
