--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ strong{
 }
 .menu1{
     height: 100vh;
-    width: 70%;
+    width: 0%;
     position: fixed;
     right: 0%;
     z-index: 0;
@@ -232,4 +232,5 @@ strong{
     box-shadow: 1px 1px 114px 1px #ffffff;
     background-color: #383737;
     display: none;
+    transition: all 0.6s ease 0.1s;
 }
