--- a/style.css
+++ b/style.css
@@ -236,5 +236,34 @@ strong{
     box-shadow: 1px 1px 114px 1px #ffffff;
     background-color: #383737;
     display: flex;
+    flex-direction: column;
     transition: all 0.6s ease 0.1s;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.menu1 button{
+    background-color: #383737;
+    border: 3px solid #0FDAB5;
+    height: 68px;
+    width: 180px;
+    color: #0FDAB5;
+    font-size: 25px;
+    font-weight: 600;
+    border-radius: 6px;
+    display: none;
+}
+.menuitems{
+    display: none;
+    flex-direction: column;
+}
+.menuitems a{
+    text-decoration: none;
+    color: white;
+}
+.menuitems ul{
+    list-style: none;
+}
+.menuitems li{
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
