--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ strong{
     background-color: #383737;
     display: flex;
     flex-direction: column;
-    transition: all 0.6s ease 0.1s;
+    transition: all 10ms ease;
     justify-content: space-evenly;
     align-items: center;
 }
