--- a/project.css
+++ b/project.css
@@ -6,15 +6,21 @@
     margin-top: 30px;
     flex-direction: column;
     overflow: hidden;
+    
 }
 .project h3{
     font-size: 50px;
 }
 .project .slide1{
-    height: 400px;
-    width: 700px;
-    background-color: white;
+    height: 84vh;
+    width: 50vw;
+    background-color: #383737;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: all 1s ease-in;
 }
 .slider{
     display:flex;
@@ -30,4 +36,35 @@
 .btn i{
     margin-top: 2px;
     margin-left: -2px;
+}
+.slide1 h1{
+    color: white;
+    font-size: 40px;
+}
+.projectimg{
+    height: 400px;
+    width: 600px;
+    border-radius: 10px;
+}
+.projectimg img{
+    height: 410px;
+    width: 610px;
+    border-radius: 10px;
+}
+.slidebtn{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-top:40px;
+    margin-bottom: 100px;
+}
+.slidebtn button{
+    height: 50px;
+    width: 153px;
+    color: #0FDAB5;
+    border: 1px solid #0FDAB5;
+    background-color: #383737;
+    border-radius: 6px;
+    font-size: 20px;
 }
