--- a/query.css
+++ b/query.css
@@ -231,4 +231,19 @@
     .project h1{
         font-size: 30px;
     }
+    .slidebtn button{
+        height: 35px;
+        width: 100px;
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 570px) {
+    .project{
+        width: 95%;
+    }
+    .project h3 {
+        font-size: 40px;
+        margin-left: 52px;
+    }
 }
